2008-12-10  Andras Varga

	* express mode status updates are now always flushed (no need to set
	cmdenv-autoflush)

	* cmdenv-status-frequency is now interpreted in seconds (default 
	is every 2 seconds)

	* express mode: when simulation stops (on Ctrl+C, exception, normally, 
	etc), Cmdenv prints a final status update

2008-11-26  Andras Varga

	* library renamed to oppcmdenv

2008-06-19  Andras Varga

	* refined signal handling: only turn on special signal handling while
	the simulation is processing events. During lengthy initializations
	etc, one can still abort the program via Ctrl-C. SIGTERM and SIGINT
	are handled. [suggested by Bradley Settlemyer]

2008-02-23  Andras Varga

	Summary of changes for omnetpp-4.0 (2006..2008):

	* inifile syntax change: [Cmdenv] config entries became cmdenv-... ones

	* cmdenv-express-mode= now defaults to true

	* new inifile entry: cmdenv-interactive=. When false, Cmdenv will
	never read stdin, which is better suited for batch execution.

	* -c option and cmdenv-config-name= inifile entry for specifying the
	configuration name to run; specific runs for the configuration can
	be selected with existing -r option or cmdenv-runs-to-execute=.
	For example,  "-c Foo -r 1..5" does 5 runs from [Config Foo]
	in the ini file.

	* prints progress percentages "nn% completed" during simulation.
	It is used by the simulation launcher's progress bar in the IDE.
	The algorithm computes percentage both from sim-time-limit and
	cpu-time-limit, and prints the larger one.

	* for run iterations (-r option and cmdenv-runs-to-execute=), accept
	both ".." and "-" as range separator, i.e. both  "2..5" and "2-5" are
	valid

	* from now on, you need to specify "-u _cmdenv_lib" (gcc) or
	"/include:_cmdenv_lib" (vc++) in addition to -lcmdenv (or cmdenv.lib)
	on the linker command line. But: now you can have a program with both
	Cmdenv and Tkenv in it.

	* out-of-directory build, and other Makefile changes

	* obsolete source heap.cc removed
